<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryColor"
    android:fillViewport="false" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvRegistrazione"
            android:text="@string/tvRegistrazione"
            android:shadowColor="@color/white"
            android:textSize="36sp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="75dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/etUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <EditText
            android:id="@+id/etNome"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/etNome"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etCognome"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/etCognome"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etEta"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="numberSigned"
            android:hint="@string/etEta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TableLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <TableRow>
                <TextView
                    android:id="@+id/tvGenere"
                    android:text="@string/tvGenere"
                    android:textSize="16dp"
                    android:layout_gravity="center|top"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp" />

                <RadioGroup
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp" >

                    <RadioButton
                        android:id="@+id/rbMaschio"
                        android:checked="false"
                        android:text="@string/rbMaschio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rbFemmina"
                        android:checked="false"
                        android:text="@string/rbFemmina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rbAltro"
                        android:checked="false"
                        android:text="@string/rbAltro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </TableRow>
        </TableLayout>

        <EditText
            android:id="@+id/etTornelloIndirizzoIP"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="number"
            android:digits="0123456789."
            android:hint="@string/etTornelloIndirizzoIP"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegBenessere"
            android:layout_width="213dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/shape2"
            android:textColor="@color/white"
            android:text="@string/btnRegistrati"
            android:layout_marginBottom="60dp"/>
    </LinearLayout>
</ScrollView>