<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:fillViewport="false">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="5dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:title="Modifica profilo"
            app:logo="@mipmap/ic_launcher_round"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:hint="@string/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <EditText
            android:id="@+id/etNome"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/etNome"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etCognome"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/etCognome"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etEta"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="numberSigned"
            android:hint="@string/etEta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TableLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <TableRow>
                <TextView
                    android:id="@+id/tvGenere"
                    android:text="@string/tvGenere"
                    android:textSize="16dp"
                    android:layout_gravity="center|top"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp" />

                <RadioGroup
                    android:layout_column="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp" >

                    <RadioButton
                        android:id="@+id/rbMaschio"
                        android:checked="false"
                        android:text="@string/rbMaschio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rbFemmina"
                        android:checked="false"
                        android:text="@string/rbFemmina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rbAltro"
                        android:checked="false"
                        android:text="@string/rbAltro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </TableRow>
        </TableLayout>

        <EditText
            android:id="@+id/etStudio"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/etStudio"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAggiorna"
            android:layout_width="213dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/shape2"
            android:textColor="@color/white"
            android:text="@string/aggiorna_profilo"
            android:onClick="aggiornaProfiloDietologo"
            android:layout_marginBottom="60dp"/>
    </LinearLayout>
</ScrollView>